gitignore and object detection

--- a/ros2_ws/src/custom_msgs/CMakeLists.txt
+++ b/ros2_ws/src/custom_msgs/CMakeLists.txt
@@ -38,7 +38,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/PoseResult.msg"
   "msg/SegmentationResult.msg"
   "msg/Yolov8Segmentation.msg"
-  DEPENDENCIES geometry_msgs std_msgs
+  "msg/ObjectCount.msg"
+  DEPENDENCIES geometry_msgs std_msgs 
 )
 
 
